--- a/px-dropdown-chevron.html
+++ b/px-dropdown-chevron.html
@@ -3,9 +3,12 @@
     siblings. When this component is run from its own repo (e.g. ui tests, examples), we assume the server is started with
     'grunt depserve' (or similar server setup) to enable correct finding of bower dependencies for local runs
 -->
-<link rel="import" href="../polymer/polymer.html" />
-<link rel="import" href="../px-polymer-font-awesome/polymer-font-awesome.html" />
+<!--<link rel="import" href="../polymer/polymer.html" />-->
+<link rel="import" href="../polymer/polymer-element.html">
 
+<!--<link rel="import" href="../px-polymer-font-awesome/polymer-font-awesome.html" />-->
+<link rel="import" href="../iron-icon/iron-icon.html">
+<link rel="import" href="../iron-iconset-svg/iron-iconset-svg.html">
 
 <!--
 Element providing a chevron for the px-dropdown element.
@@ -26,87 +29,19 @@ Element providing a chevron for the px-dropdown element.
 <dom-module id="px-dropdown-chevron">
   <template>
     <style include="px-dropdown-chevron-styles"></style>
+    <iron-iconset-svg id="fa" name="fa" size="1792">
+      <svg>
+        <defs>
+          <g id="fa-angle-down" transform="scale(1 -1) translate(320 -1536)"><path d="M1075 800q0 -13 -10 -23l-466 -466q-10 -10 -23 -10t-23 10l-466 466q-10 10 -10 23t10 23l50 50q10 10 23 10t23 -10l393 -393l393 393q10 10 23 10t23 -10l50 -50q10 -10 10 -23z"/></g>
+        </defs>
+      </svg>
+    </iron-iconset-svg>
+
     <div class$="{{_chevronClass(hover, opened)}} px-dropdown-chevron" id="trigger">
       <iron-icon icon="fa:fa-angle-down" class$="{{_chevronClass(hover, opened)}} angle-down"></iron-icon>
     </div>
   </template>
 </dom-module>
 
-<script>
-  Polymer({
-    is: 'px-dropdown-chevron',
-    properties:{
-      /**
-       * Boolean which reflects whether the chevron is being hovered over.
-       *
-       * @prop hover
-       * @type Boolean
-       * @default false
-       * @notify true
-       */
-      hover: {
-        type: Boolean,
-        value: false,
-        notify: true
-      },
-      /**
-       * Boolean which reflects whether the menu is open.
-       *
-       * @prop opened
-       * @type Boolean
-       * @default false
-       * @notify true
-       */
-      opened: {
-        type: Boolean,
-        value: false,
-        notify: true
-      }
-    },
-    listeners: {
-      'hoverOff': '_manipulateHoverOff',
-      'hoverOn': '_manipulateHoverOn',
-      'opened': '_manipulateOpened'
-    },
-    /**
-     * this function flips the opened flag, and changes the class for the component
-     *
-     *
-     * @method _manipulateOpened
-     */
-    _manipulateOpened: function(evt) {
-      evt.stopPropagation();
-      this.opened = !this.opened;
-    },
-    /**
-     * this function sets the hover flag to false, and changes the class for the component
-     *
-     * @method _manipulateHoverOff
-     */
-    _manipulateHoverOff: function(evt) {
-      evt.stopPropagation();
-      this.hover = false;
-    },
-    /**
-     * this function sets the hover flag to true, and changes the class for the component
-     *
-     * @method _manipulateHoverOn
-     */
-    _manipulateHoverOn: function(evt) {
-      evt.stopPropagation();
-      this.hover = true;
-    },
-    /**
-     * This method add either the opened or hover class.
-     *
-     * @method _chevronClass
-     */
-    _chevronClass: function() {
-      if (this.opened) {
-        return "opened";
-      } else if (this.hover) {
-        return "hover";
-      }
-    }
-  });
-</script>
+<script src="px-dropdown-chevron.es6.js"></script>
+
